Update Iweb duration + use cdn resources

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <title>Jérémy Buget - ScrumMaster & Agile Practitionner</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
-    <link rel="stylesheet" href="css/style.css" >
+      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css">
+      <link rel="stylesheet" href="css/style.css" >
   </head>
 
   <body>
@@ -79,7 +79,7 @@
 
         <!-- IWEB -->
         <article class="experience">
-          <h4><span class="project">IWeb</span><small> ~ Juillet 2011 - Aujourd'hui (15 mois)</small></h4>
+          <h4><span class="project">IWeb</span><small> ~ Juillet 2011 - Janvier 2013 (19 mois)</small></h4>
           <div class="description">
             <section class="funcationalContext">
               <p>IWeb est une usine de sites marketing visant à gérer et présenter des produits financier pour le compte et au sein d'un institut financier mondial. Il s'agit d'une application multi-produits (listés / structurés), multi-pays (Espagne, Italie, Allemagne, Angleterre, Suède, Autriche) et multi-terminaux (web & mobile).</p>
@@ -357,8 +357,8 @@
       </div>
     </footer>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
     <script src="js/jqprint.js"></script>
     
     <script>
