Change blog URL

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Liens <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="mailto:jbuget@agile-spirit.fr" class="contact-button"><i class="icon-envelope"></i> Contact</a></li>
-                  <li><a href="http://agile-spirit.fr/blog" target="blank" class="blog-button"><i class="icon-pencil"></i> Blog</a></li>
+                  <li><a href="http://blog.agile-spirit.fr" target="blank" class="blog-button"><i class="icon-pencil"></i> Blog</a></li>
                   <li><a href="https://twitter.com/AgileSpirit" target="blank" class="twitter-button"><i class="icon-user"></i> Twitter</a></li>
                   <li><a href="https://github.com/AgileSpirit/" target="blank" class="github-button"><i class="icon-certificate"></i> Github</a></li>
                 </ul>
